<resources>
    <string name="app_name">Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="introUser">Introduzca su usuario</string>
    <string name="introPass">Introduzca su password</string>
    <string name="introEmail">Introduzca su email</string>
    <string name="login">LOGIN</string>
    <string name="cancel">CANCEL</string>
    <string name="register">REGISTER</string>
</resources>
